# j92

./: Cargo.toml  README.md
doc/: log.txt
examples/opengl/: .mat.rs.swp  README.md  main.rs
src/: .lib.rs.swp  f16.rs  f32.rs  f64.rs  iterator.rs  iterstuff.rs  lib.rs  rotations.rs  rugfloat.rs  rugrat.rs  sym.rs
